--- a/FinderTools/FinderTools.entitlements
+++ b/FinderTools/FinderTools.entitlements
@@ -8,6 +8,8 @@
 	<array>
 		<string>group.com.thom1606.Astrix</string>
 	</array>
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 </dict>
