--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: thom1606
-custom: [paypal.me/thombroek1606, https://revolut.me/thom1606]
+custom: [paypal.me/thombroek1606, https://revolut.me/thom1606, https://thom1606.gumroad.com/l/astrix]
