--- a/Astrix/Info.plist
+++ b/Astrix/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>SUFeedURL</key>
+	<string>https://thomvandenbroek.com/astrix/appcast.xml</string>
+	<key>SUPublicEDKey</key>
+	<string>8jnb+oJxxlzxCefWv7iPQni/4WDGvw/zTSPHm9+5HiE=</string>
 	<key>TEAM_IDENTIFIER</key>
 	<string>$(TEAM_IDENTIFIER)</string>
 </dict>
